Upgrade no java e maria db